[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/gameplay/gameplay.gd" type="Script" id=1]
[ext_resource path="res://scenes/gameplay/Panel3.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/box.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/cross.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/cog_wheel.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/underline.png" type="Texture" id=6]
[ext_resource path="res://assets/themes/uni_theme.tres" type="Theme" id=7]
[ext_resource path="res://scenes/gameplay/User.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0, 0.0980392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=2]
ScrollContainer/styles/bg = SubResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.231373, 0.0784314, 0.529412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="VisualShaderNodeColorConstant" id=5]
constant = Color( 0.476563, 0, 1, 1 )

[sub_resource type="VisualShader" id=6]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(0.476563, 0.000000, 1.000000);
	float n_out2p1 = 1.000000;

// Output:0
	ALBEDO = n_out2p0;
	EMISSION = n_out2p0;
	NORMAL = n_out2p0;
	NORMALMAP = n_out2p0;
	ANISOTROPY_FLOW = n_out2p0.xy;
	TRANSMISSION = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 56, 21 )
nodes/fragment/2/node = SubResource( 5 )
nodes/fragment/2/position = Vector2( 251, 329 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 2, 0, 0, 5, 2, 0, 0, 7, 2, 0, 0, 8, 2, 0, 0, 15, 2, 0, 0, 17 )

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.222656
margin_top = -1.25719
margin_right = 0.222656
margin_bottom = -1.2572
theme = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 60.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Control"]
margin_right = 1004.0
margin_bottom = 530.0
custom_constants/separation = 30
dragger_visibility = 1

[node name="Panel" type="Panel" parent="Control/HSplitContainer"]
margin_right = 271.0
margin_bottom = 530.0
rect_min_size = Vector2( 271, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/HSplitContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
theme = ExtResource( 7 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HSplitContainer/Panel/ScrollContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 221.0
margin_bottom = 1258.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 219.0
margin_bottom = 80.0

[node name="HBoxContainer2" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 219.0
margin_bottom = 164.0

[node name="HBoxContainer3" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 219.0
margin_bottom = 248.0

[node name="HBoxContainer7" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 252.0
margin_right = 219.0
margin_bottom = 332.0

[node name="HBoxContainer8" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 336.0
margin_right = 219.0
margin_bottom = 416.0

[node name="HBoxContainer9" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 420.0
margin_right = 219.0
margin_bottom = 500.0

[node name="HBoxContainer10" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 504.0
margin_right = 219.0
margin_bottom = 584.0

[node name="HBoxContainer11" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 588.0
margin_right = 219.0
margin_bottom = 668.0

[node name="HBoxContainer12" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 672.0
margin_right = 219.0
margin_bottom = 752.0

[node name="HBoxContainer13" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 756.0
margin_right = 219.0
margin_bottom = 836.0

[node name="HBoxContainer14" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 840.0
margin_right = 219.0
margin_bottom = 920.0

[node name="HBoxContainer15" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 924.0
margin_right = 219.0
margin_bottom = 1004.0

[node name="HBoxContainer4" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1008.0
margin_right = 219.0
margin_bottom = 1088.0

[node name="HBoxContainer5" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1092.0
margin_right = 219.0
margin_bottom = 1172.0

[node name="HBoxContainer6" parent="Control/HSplitContainer/Panel/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1176.0
margin_right = 219.0
margin_bottom = 1256.0

[node name="Panel2" type="Panel" parent="Control/HSplitContainer"]
margin_left = 301.0
margin_right = 1004.0
margin_bottom = 530.0
size_flags_horizontal = 3

[node name="Panel3" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 9.05612
margin_top = 10.0
margin_right = -10.9438
margin_bottom = 55.0
size_flags_horizontal = 3
theme = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel3"]
anchor_left = 0.872
anchor_top = 0.195
anchor_right = 0.986
anchor_bottom = 0.78
margin_left = 0.543884
margin_top = -0.466939
margin_right = 0.807922
margin_bottom = -0.451941
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Panel3/HBoxContainer"]
self_modulate = Color( 0.662745, 1, 0.564706, 1 )
material = SubResource( 7 )
margin_right = 25.0
margin_bottom = 26.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Button3" type="TextureButton" parent="Panel3/HBoxContainer"]
self_modulate = Color( 0.662745, 1, 0.564706, 1 )
material = SubResource( 7 )
margin_left = 29.0
margin_right = 55.0
margin_bottom = 26.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Button4" type="TextureButton" parent="Panel3/HBoxContainer"]
self_modulate = Color( 0.662745, 1, 0.564706, 1 )
material = SubResource( 7 )
margin_left = 59.0
margin_right = 84.0
margin_bottom = 26.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Button2" type="TextureButton" parent="Panel3/HBoxContainer"]
self_modulate = Color( 0.662745, 1, 0.564706, 1 )
material = SubResource( 7 )
margin_left = 88.0
margin_right = 114.0
margin_bottom = 26.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Control2" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Panel3" to="Panel3" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="Panel3/HBoxContainer/Button" to="Panel3" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel3/HBoxContainer/Button3" to="Panel3" method="_on_MinimizeButton_pressed"]
[connection signal="pressed" from="Panel3/HBoxContainer/Button4" to="Panel3" method="maxi_button_pressed"]
[connection signal="pressed" from="Panel3/HBoxContainer/Button2" to="Panel3" method="_on_CloseButton_pressed"]
[connection signal="gui_input" from="Control2" to="." method="_on_Resize_gui_input"]
